--- a/Index.html
+++ b/Index.html
@@ -3,38 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/kendo/kendoConsole.css">
     <script type="application/javascript" src="node_modules/underscore/underscore.js"></script>
-
-
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/kendo/kenoConsole.js"></script>
+    <script src="js/index.js"></script>
 </head>
-<body class="pt-2">
 
-<div class="container px-4">
-    <div class="row gx-5">
-        <div class="col">
-            <div class="p-3 border bg-light">Custom column padding..</div>
+<body class="pt-2 bg-black bg-opacity-25">
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <button type="button" class="btn btn-primary col-3" id="btnMax">Max</button>
+                <button class="btn btn-primary col-3" id="btnPluck">Pluck</button>
+            </div>
         </div>
-        <div class="col">
-            <div class="p-3 border bg-light">Custom column padding</div>
-        </div>
-    </div>
-</div>
 
-
-<div class="container">
-    <div class="row">
-        <div class="well-container">
-            <div class="col text-center">
-                <div class="console" style="overflow-y: scroll; height:100px;"></div>
+        <div class="row">
+            <div class="well-container">
+                <div class="col text-center">
+                    <div class="console" style="overflow-y: scroll; height:200px;"></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<script type="text/javascript">
-    var numbers = [100, 50, 400, 66, 7900];
-    console.log(_.max(numbers));
-</script>
+
+    <script type="text/javascript">
+
+        $('#btnMax').click(function (event) {
+            const numbers = [100, 50, 400, 66, 7900];
+            kendoConsole.log("Max " + _.max(numbers));
+        });
+
+        $('#btnPluck').click(function (event) {
+            _.each(_.pluck(employeesCollection, "name"), function (element, index, list) {
+                const output = index + ' ' + element;
+                kendoConsole.log(output);
+            });
+        });
+
+
+    </script>
+
 </body>
 </html>
