--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
             <div class="col">
                 <button type="button" class="btn btn-primary col-3" id="btnMax">Max</button>
                 <button class="btn btn-primary col-3" id="btnPluck">Pluck</button>
+                <button class="btn btn-primary col-3" id="btnFilter">Filter</button>
             </div>
         </div>
 
@@ -46,6 +47,12 @@
             });
         });
 
+        $('#btnFilter').click(function (event) {
+            _.each(_.filter([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; }), function (element, index) {
+                const output = index + ' ' + element;
+                kendoConsole.log(output);
+            });
+        });
 
     </script>
 
