--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,7 @@
             </div>
         </div>
 
+        <!-- this is the container for kendoConsole -->
         <div class="row">
             <div class="well-container">
                 <div class="col text-center">
@@ -32,15 +33,14 @@
                 </div>
             </div>
         </div>
-            <div class="row mt-3">
-                <div class="col">
-                    <button type="button" class="btn btn-dark col-12" id="btnClearConsole">Clear</button>
-                </div>
+
+        <div class="row mt-3">
+            <div class="col">
+                <button type="button" class="btn btn-dark col-12" id="btnClearConsole">Clear</button>
             </div>
+        </div>
 
     </div>
-
-
 
 </body>
 </html>
