:sparkle: added samples

--- a/Index.html
+++ b/Index.html
@@ -9,19 +9,25 @@
     <script type="application/javascript" src="node_modules/underscore/underscore.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="js/kendo/kenoConsole.js"></script>
-    <script src="js/index.js"></script>
+        <script src="js/index.js"></script>
 </head>
 
 <body class="pt-2 bg-black bg-opacity-25">
 
 
     <div class="container">
-        <div class="row">
+        <div class="row" >
             <div class="col">
-                <button type="button" class="btn btn-primary col-3" id="btnMax">Max</button>
+                <button class="btn btn-primary col-2" id="btnMax">Max</button>
                 <button class="btn btn-primary col-2" id="btnPluck">Pluck</button>
                 <button class="btn btn-primary col-2" id="btnFilter">Filter</button>
                 <button class="btn btn-primary col-2" id="btnSort">Sort</button>
+                <button class="btn btn-primary col-2" id="btnSome">Some</button>
+            </div>
+        </div>
+        <div class="row mt-3" >
+            <div class="col">
+                <button class="btn btn-primary col-2" id="btnGetSalary">Salary</button>
             </div>
         </div>
 
